--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-VITE_BACKEND_URL = 'https://careconnect-0p3b.onrender.com'
+VITE_BACKEND_URL = 'http://localhost:5000'
 VITE_RAZORPAY_KEY_ID = '------ Razorpay Key Id here ------'
